Fix Responsiveness on small screens (<350px)

--- a/src/pages/App/App.module.css
+++ b/src/pages/App/App.module.css
@@ -1,6 +1,7 @@
 .page {
+  min-width: fit-content;
   position: relative;
-  padding: 3rem max(3rem, 13vw) 6rem;
+  padding: 3rem 13dvw 6rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
