--- a/src/pages/Burger/Burger.module.css
+++ b/src/pages/Burger/Burger.module.css
@@ -14,7 +14,7 @@
   composes: secondaryColor from '/src/assets/colors.module.css';
   composes: whiteBg from '/src/assets/colors.module.css';
   min-width: 350px;
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem max(1.5rem, 4dvw);
   z-index: 999;
   display: flex;
   flex-direction: column;
@@ -56,6 +56,10 @@
   gap: 0.75rem;
 }
 
+.burgerItemContainer:first-child {
+  margin-bottom: 1.5rem;
+}
+
 .burgerItemContainer:hover {
   cursor: pointer;
 }
@@ -73,7 +77,7 @@ button {
 
 @media (max-width: 430px) {
   .burgerPopout {
-    min-width: none;
+    min-width: 0;
     width: 100%;
   }
 }
