--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -14,7 +14,7 @@
   composes: secondaryColor from '/src/assets/colors.module.css';
   composes: whiteBg from '/src/assets/colors.module.css';
   min-width: 350px;
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem max(1.5rem, 4dvw);
   z-index: 999;
   display: flex;
   flex-direction: column;
@@ -107,7 +107,7 @@ button {
 
 @media (max-width: 430px) {
   .cartPopout {
-    min-width: none;
+    min-width: 0;
     width: 100%;
   }
 }
